--- a/charts/rabbitmq/values.yaml
+++ b/charts/rabbitmq/values.yaml
@@ -61,12 +61,12 @@ resources: {}
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-   limits:
-     cpu: 250m
-     memory: 250Mi
-   requests:
-     cpu: 250m
-     memory: 250Mi
+  # limits:
+  # cpu: 250m
+  # memory: 250Mi
+  # requests:
+  # cpu: 250m
+  # memory: 250Mi
 
 autoscaling:
   enabled: false
